feat: Implementar responsividade e scroll automático com useState e useEffect- Adicionado hook useState para trocar os botões do header por um botão de menu em telas menores que 768px.- Implementado useEffect para garantir que, ao trocar de página, a tela volte automaticamente para o topo.Essas mudanças melhoram a experiência do usuário em dispositivos móveis e garantem que a navegação seja mais fluida ao navegar entre páginas.

--- a/dnc-arq-adrian/src/components/Footer/Footer.css
+++ b/dnc-arq-adrian/src/components/Footer/Footer.css
@@ -61,4 +61,8 @@ footer .social-links a {
         max-width: 100%;
         width: 100%;
     }
+    
+    .mobile-fd-column{
+        flex-direction: column;
+      }
 }
