--- a/dnc-arq-adrian/src/components/Hero/Hero.css
+++ b/dnc-arq-adrian/src/components/Hero/Hero.css
@@ -16,13 +16,13 @@
     width: 40%;
 }
 
-@media (max-widht: 768px) {
+@media (max-width: 768px) {
     .hero-text {
-        widht: 100%;
+        width: 100%;
     }
 }
 
-@media (max-widht: 768px) {
+@media (max-width: 568px) {
     .hero h1 {
         font-size: 50px;
     }
